CHANGES

release 74.1
 - in tests, explicitly clear existing db connection before resetting the tables and loading fixtures;
   otherwise, an very long wait (as set by GLOBAL wait_timeout ) occurs, see RT#336398
   for some reason this wait only occurs on MySQL servers v 5.5.30 and above

release 74.0
 - removed unnecessary separate log from apache configuration file

release 73.9
 - cgi scripts that are linked from the main tracking web app are moved to this
     project together with an apache configuration file for servers on sfweb nodes
 - apache configuration file for sfweb nodes updated:
     bed files are not visible
     all tracking-related services sre run on port 9000, port 9080 is not used
     the cgi-bin url component is mapped to the cgi-bin directory underb the npg
       root /software/solexa/npg, where all npg cgi scripts are deployed to
     npg own modules are taken from the default deployment location,
       /software/solexa/npg/lib/perl5
     htdocs directory is mapped to the deployed /software/solexa/npg/htdocs

release 73.8
 - make dependency on IO::All::FTP explicit

release 73.7
 - propagate caller environment to scrits running under daemons
   as a part of a move to perl 5.14.2
 - warnings under per l5.14.2 tidied up
 - unnecessary '##no critic' statements removed

release 73.6
 - test for npg_daemon_control fixed copes with presence of daemon plugins
     that are not defined in this package
 - npg_testing::db module:
      copes with old-style naming convention for yml db fixtures
      new subroutine for running tests against existing test database

release 73.5
 - live environment might be set explicitly or implicitly (default) RT#325903
   for the purpose of log file location
 - st::api::lims class variable for inline index end
 - deamon monitor script, daemon parent class and tracking related daemons moved to
   this project from instrument_handling
 - disable percritic policies for having VERSION defined and having Rcs Keywords